# bob

./: .gitignore  .pre-commit-config.yaml  Justfile  Pipfile  devbox.json  rust-toolchain.toml
backend/: Cargo.toml
backend/logging/: Cargo.toml
backend/logging/src/: lib.rs
backend/server/: Cargo.toml
backend/server/src/: database.rs  main.rs
frontend/: .eslintrc.json  bun.lockb  package.json
frontend/nextjs/: bun.lockb  tailwind.config.ts
frontend/nextjs/src/app/: globals.css
frontend/nextjs/src/app/(auth)/login/: page.tsx
frontend/nextjs/src/components/: Input.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/components/: Input.tsx
frontend/svelte/: bun.lockb  package.json  tailwind.config.js
frontend/svelte/src/components/: input.svelte
frontend/svelte/src/routes/: +layout.svelte
frontend/svelte/src/routes/login/: +page.svelte
