[package]
name = "example-sqlx-postgres"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
logging = { workspace = true }
tracing = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }
tower = { workspace = true, features = ["util", "timeout"] }
tower-http = { workspace = true, features = ["add-extension", "trace"] }
uuid = { workspace = true, features = ["serde", "v4"] }
anyhow = { workspace = true }
